force-app/main/default/objects/Asset/fields/Configuration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Notes__c</fullName>
    <description>Technical configuration notes and documentation</description>
    <inlineHelpText>Enter configuration details and technical notes</inlineHelpText>
    <label>Configuration Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>