force-app/main/default/objects/Asset/fields/Criticality__c.field-meta.xml
<CustomField>
    <fullName>Criticality__c</fullName>
    <description>Business criticality level of the asset</description>
    <inlineHelpText>Select the criticality level for business operations</inlineHelpText>
    <label>Criticality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>