force-app/main/default/objects/Asset/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <description>Current market value of the asset</description>
    <inlineHelpText>Enter the current estimated value</inlineHelpText>
    <label>Current Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>