force-app/main/default/objects/Asset/fields/Days_Until_Next_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Next_Maintenance__c</fullName>
    <description>Formula field calculating the number of days until the next scheduled maintenance</description>
    <formula>IF(ISBLANK(Next_Maintenance_Date__c), NULL, Next_Maintenance_Date__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated based on Next Maintenance Date</inlineHelpText>
    <label>Days Until Next Maintenance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>