force-app/main/default/objects/Asset/fields/Depreciation_Method__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Method__c</fullName>
    <description>Method used to calculate asset depreciation</description>
    <inlineHelpText>Select the depreciation method applied to this asset</inlineHelpText>
    <label>Depreciation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Straight Line</fullName>
                <default>true</default>
                <label>Straight Line</label>
            </value>
            <value>
                <fullName>Declining Balance</fullName>
            </value>
            <value>
                <fullName>Double Declining Balance</fullName>
            </value>
            <value>
                <fullName>Sum of Years Digits</fullName>
            </value>
            <value>
                <fullName>Units of Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>