force-app/main/default/objects/Asset/fields/Disposal_Date__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Date__c</fullName>
    <description>Date when the asset was disposed of or decommissioned</description>
    <inlineHelpText>Enter the date when this asset was disposed of</inlineHelpText>
    <label>Disposal Date</label>
    <type>Date</type>
</CustomField>