force-app/main/default/objects/Asset/fields/Documentation_URL__c.field-meta.xml
<CustomField>
    <fullName>Documentation_URL__c</fullName>
    <description>Link to external documentation, manuals, or knowledge base articles</description>
    <inlineHelpText>Enter the URL to documentation or manuals for this asset</inlineHelpText>
    <label>Documentation URL</label>
    <type>Url</type>
</CustomField>