force-app/main/default/objects/Asset/fields/External_Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Asset_Id__c</fullName>
    <description>Unique identifier from external system for integration purposes</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the asset ID from your external system (e.g., ERP, CMDB)</inlineHelpText>
    <label>External Asset ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>