force-app/main/default/objects/Asset/fields/Hostname__c.field-meta.xml
<CustomField>
    <fullName>Hostname__c</fullName>
    <description>Network hostname or computer name assigned to this asset</description>
    <inlineHelpText>Enter the hostname or computer name for this asset</inlineHelpText>
    <label>Hostname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>