force-app/main/default/objects/Asset/fields/Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Date__c</fullName>
    <description>Date when the asset was installed</description>
    <inlineHelpText>Enter the date when this asset was installed</inlineHelpText>
    <label>Installation Date</label>
    <type>Date</type>
</CustomField>