force-app/main/default/objects/Asset/fields/Is_Under_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Is_Under_Warranty__c</fullName>
    <description>Indicates if asset is currently under warranty</description>
    <formula>Warranty_Expiration__c &gt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated based on warranty expiration date</inlineHelpText>
    <label>Is Under Warranty</label>
    <type>Checkbox</type>
</CustomField>