force-app/main/default/objects/Asset/fields/Last_Maintenance_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Maintenance_Date__c</fullName>
    <description>Date when the asset was last maintained</description>
    <inlineHelpText>Enter the date when maintenance was last performed on this asset</inlineHelpText>
    <label>Last Maintenance Date</label>
    <type>Date</type>
</CustomField>