force-app/main/default/objects/Asset/fields/Maintenance_Status__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Status__c</fullName>
    <description>Formula field indicating whether maintenance is current, due soon, or overdue</description>
    <formula>IF(ISBLANK(Next_Maintenance_Due__c), &quot;Not Scheduled&quot;,
IF(Next_Maintenance_Due__c &lt; TODAY(), &quot;Overdue&quot;,
IF(Next_Maintenance_Due__c &lt;= TODAY() + 30, &quot;Due Soon&quot;, &quot;Current&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated based on Next Maintenance Date</inlineHelpText>
    <label>Maintenance Status</label>
    <type>Text</type>
</CustomField>