force-app/main/default/objects/Asset/fields/Next_Maintenance_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Maintenance_Due__c</fullName>
    <description>Scheduled date for the next maintenance activity</description>
    <inlineHelpText>Enter the date when the next maintenance is scheduled</inlineHelpText>
    <label>Next Maintenance Due</label>
    <type>Date</type>
</CustomField>