force-app/main/default/objects/Asset/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <description>Operating system installed on this asset</description>
    <inlineHelpText>Enter the operating system name and version</inlineHelpText>
    <label>Operating System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>