force-app/main/default/objects/Asset/fields/Parent_Asset__c.field-meta.xml
<CustomField>
    <fullName>Parent_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent asset in hierarchy</description>
    <inlineHelpText>Select the parent asset if this is a sub-component</inlineHelpText>
    <label>Parent Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Child Assets</relationshipLabel>
    <relationshipName>Child_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>