force-app/main/default/objects/Asset/fields/Purchase_Cost__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Cost__c</fullName>
    <description>Original purchase cost of the asset</description>
    <inlineHelpText>Enter the original purchase cost</inlineHelpText>
    <label>Purchase Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>