force-app/main/default/objects/Asset/fields/Retirement_Date__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Date__c</fullName>
    <description>Date when the asset was or will be retired from active use</description>
    <inlineHelpText>Enter the date when this asset is scheduled to be retired</inlineHelpText>
    <label>Retirement Date</label>
    <type>Date</type>
</CustomField>