force-app/main/default/objects/Asset/fields/Salvage_Value__c.field-meta.xml
<CustomField>
    <fullName>Salvage_Value__c</fullName>
    <description>Estimated residual value of the asset at the end of its useful life</description>
    <inlineHelpText>Enter the expected salvage value when the asset is retired</inlineHelpText>
    <label>Salvage Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>