force-app/main/default/objects/Asset/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Site location where asset is installed</description>
    <inlineHelpText>Select the site location</inlineHelpText>
    <label>Site</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>