force-app/main/default/objects/Asset/fields/Technical_Notes__c.field-meta.xml
<CustomField>
    <fullName>Technical_Notes__c</fullName>
    <description>Additional technical notes, configuration details, or special instructions</description>
    <inlineHelpText>Enter any technical notes, configuration details, or special instructions for this asset</inlineHelpText>
    <label>Technical Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>