force-app/main/default/objects/Asset/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <description>Version number for tracking asset configuration changes</description>
    <inlineHelpText>Enter the version number (e.g., 1.0, 2.5)</inlineHelpText>
    <label>Version Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>