force-app/main/default/objects/Asset/validationRules/Installation_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Installation_Date_Cannot_Be_Future</fullName>
    <active>true</active>
    <description>Prevents setting the installation date to a future date</description>
    <errorConditionFormula>Installation_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Installation_Date__c</errorDisplayField>
    <errorMessage>Installation Date cannot be in the future. Please enter a valid date.</errorMessage>
</ValidationRule>