force-app/main/default/objects/Asset/validationRules/Maint_Interval_Req_Equipment.validationRule-meta.xml
<ValidationRule>
    <fullName>Maint_Interval_Req_Equipment</fullName>
    <active>true</active>
    <description>Requires Maintenance Interval for Hardware and Network Equipment categories</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Asset_Category__c, &quot;Hardware&quot;),
        ISPICKVAL(Asset_Category__c, &quot;Network Equipment&quot;)
    ),
    ISPICKVAL(Lifecycle_Stage__c, &quot;Active&quot;),
    ISBLANK(Maintenance_Interval_Days__c)
)</errorConditionFormula>
    <errorDisplayField>Maintenance_Interval_Days__c</errorDisplayField>
    <errorMessage>Maintenance Interval is required for active Hardware and Network Equipment assets.</errorMessage>
</ValidationRule>