force-app/main/default/objects/Asset/listViews/Assets_by_Version_Status.listView-meta.xml
<ListView>
    <fullName>Assets_by_Version_Status</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Version__c</columns>
    <columns>Version_Status__c</columns>
    <columns>Version_Notes__c</columns>
    <columns>Site__c</columns>
    <columns>ASSET.PARENT</columns>
    <filterScope>Mine</filterScope>
    <label>Assets by Version Status</label>
</ListView>