force-app/main/default/objects/Asset/listViews/Assets_Without_Maintenance_Schedule.listView-meta.xml
<ListView>
    <fullName>Assets_Without_Maintenance_Schedule</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Maintenance_Interval_Days__c</field>
        <operation>equals</operation>
    </filters>
    <label>Assets Without Maintenance Schedule</label>
</ListView>