force-app/main/default/objects/Asset/listViews/Critical_Assets.listView-meta.xml
<ListView>
    <fullName>Critical_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Site__c</columns>
    <columns>Condition__c</columns>
    <columns>Next_Maintenance_Due__c</columns>
    <columns>Purchase_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Criticality__c</field>
        <operation>equals</operation>
        <value>Critical</value>
    </filters>
    <filters>
        <field>ASSET.STATUS</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Critical Assets</label>
</ListView>