force-app/main/default/objects/Asset/listViews/Due_This_Week.listView-meta.xml
<ListView>
    <fullName>Due_This_Week</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Site__c</columns>
    <columns>Days_Until_Maintenance__c</columns>
    <columns>Next_Maintenance_Due__c</columns>
    <columns>Maintenance_Interval_Days__c</columns>
    <columns>Criticality__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Next_Maintenance_Due__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Next_Maintenance_Due__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>ASSET.STATUS</field>
        <operation>notEqual</operation>
        <value>Obsolete</value>
    </filters>
    <label>Due This Week</label>
</ListView>