force-app/main/default/objects/Asset/listViews/Overdue_Maintenance.listView-meta.xml
<ListView>
    <fullName>Overdue_Maintenance</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Maintenance_Status__c</columns>
    <columns>Next_Maintenance_Due__c</columns>
    <columns>Maintenance_Interval_Days__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ASSET.STATUS</field>
        <operation>notEqual</operation>
        <value>Obsolete</value>
    </filters>
    <filters>
        <field>Maintenance_Status__c</field>
        <operation>equals</operation>
        <value>Overdue</value>
    </filters>
    <label>Overdue Maintenance</label>
</ListView>