force-app/main/default/objects/Asset/listViews/Recently_Created_from_Template.listView-meta.xml
<ListView>
    <fullName>Recently_Created_from_Template</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Asset_Template__c</columns>
    <columns>Template_Applied_Date__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_From_Template__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ASSET.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Recently Created from Template</label>
</ListView>